Bug 1962756 - add button to link preview to jump to settings - r=Mardak,firefox-ai-ml-reviewers,fluent-reviewers,bolsson
- update styles with moz-button
- redirect to #general-link-preview
- add dismiss event dispatch

Differential Revision: https://phabricator.services.mozilla.com/D248343

UltraBlame original commit: 184996d2ef840b89a92a2f11e94c1943e07d1c7b

--- a/browser/components/genai/content/link-preview-card.css
+++ b/browser/components/genai/content/link-preview-card.css
@@ -1250,3 +1250,31 @@ width
 }
 }
 }
+.
+reading
+-
+time
+-
+settings
+-
+container
+{
+align
+-
+items
+:
+center
+;
+display
+:
+flex
+;
+justify
+-
+content
+:
+space
+-
+between
+;
+}
